# jwt-auth

./: .env  Cargo.toml  README.md  docker-compose.yml  migration.sql
src/: accounts.rs  auth.rs  handler.rs  jwt.rs  main.rs  model.rs
