[package]
name = "jwt-auth"
version = "0.1.0"
authors = ["Yasuhiro Suzuki <yasszu@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
log = "0.4.0"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
r2d2 = "0.8.4"
r2d2_postgres = "0.16.0"
postgres = "0.17.0"
rust-crypto = "0.2.36"
validator = "0.10"
validator_derive = "0.10"